<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="button">Button</string>
    <string name="title_activity_principal">Principal</string>
    <string name="Ingreso" />
    <string name="title_activity_bienvenida">Bienvenida</string>
    <string name="principal">TODO</string>

    <string name="fondo">TODO</string>
    <string name="icon">TODO</string>
    <string name="bienvenidos_a_movieface">Bienvenidos a MovieFace</string>
    <string name="crea_tu_cuenta_y_deja_que_movieface_encuentre_una_pel_cula_para_ti">Crea tu cuenta y deja que MovieFace encuentre una película para ti.</string>
    <string name="facebook">TODO</string>
    <string name="a_n_no_tiene_cuenta">¿Aún no tiene cuenta?,</string>
    <string name="reg_strate_aqu">Regístrate aquí.</string>
    <string name="iniciarsesion">TODO</string>
    <string name="title_activity_inicio">Inicio</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Correo electrónico</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="siguiente">Siguiente</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="contrasena">Contraseña</string>
    <string name="olvidaste_tu_contrasena">Olvidaste tu contraseña?</string>
    <string name="todo">TODO</string>

</resources>
